// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentOutline header blocks present should match snapshot 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={true}
      key="0"
      level="H2"
      path={Array []}
      target="#block-29532918-0ff3-42da-b8c7-455f7af120ea"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading parent"
      />
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={true}
      key="1"
      level="H3"
      path={Array []}
      target="#block-2b9fbe24-affe-47e2-b7ec-34158e53aad8"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading child"
      />
    </TableOfContentsItem>
  </ul>
</div>
`;

exports[`DocumentOutline header blocks present should render warnings for multiple h1 headings 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={false}
      key="0"
      level="H1"
      path={Array []}
      target="#block-a0253b47-f7d9-4707-b07a-b738d2c174c7"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={false}
      key="1"
      level="H1"
      path={Array []}
      target="#block-a0253b47-f7d9-4707-b07a-b738d2c174c7"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
  </ul>
</div>
`;
